# introduction-to-lang-chain

./: .env.example  .gitignore  README.md  pyproject.toml
1_chat_models/: 1_chat_model_basics.py  2_chat_model_basic_conversation.py  3_chat_model_alternatives.py  4_chat_model_conversation_with_user.py
2_prompt_templates/: 1_prompt_template_basic.py  2_prompt_template_with_chat_model.py
3_chains/: 1_chains_basics.py  2_chains_under_the_hood.py  3_chains_extended.py  4_chains_parallel.py  5_chains_branching.py
4_rag/: 1a_rag_basics.py  1b_rag_basics.py  2a_rag_basics_metadata.py  2b_rag_basics_metadata.py  3_rag_text_splitting_deep_dive.py  4_rag_embedding_deep_dive.py  5_rag_retriever_deep_dive.py  6_rag_one_off_question.py  7_rag_conversational.py  8_rag_web_scrape_basic.py
Massimo/: config.py  main.py  requirements.txt
Massimo/models/: __init__.py  pdf_details.py  signature_details.py
Massimo/utils/: __init__.py  image_preprocesing_utils.py  pdf_signature_utils.py  pdf_text_utils.py
